apps/appiecal-idp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appiecal-idp
  namespace: default
  annotations:
    secrets.phase.dev/redeploy: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appiecal-idp
  template:
    metadata:
      labels:
        app: appiecal-idp
    spec:
      containers:
        - name: appiecal-idp
          image: ghcr.io/ijskoud/appiecal-idp@sha256:9d7d4828b01a621e9844d11acee7fb3cccf687bb57c85985c1576b53bce9a4aa
          ports:
            - containerPort: 8080
