apps/appiecal-idp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appiecal-idp
  namespace: default
spec:
  selector:
    app: appiecal-idp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
